fix(@vtmn/css): modal, remove indocator overflow

--- a/packages/sources/css/src/components/overlays/modal/src/index.css
+++ b/packages/sources/css/src/components/overlays/modal/src/index.css
@@ -76,7 +76,6 @@
 .vtmn-modal_content_body {
   margin: rem(16px) 0;
   overflow-y: auto;
-  position: relative;
 }
 
 .vtmn-modal_content_body--text {
